--- a/Desktop/room/index.html
+++ b/Desktop/room/index.html
@@ -45,11 +45,11 @@
 
             <div class="item">
               <label>Gender:</label><br>
-              <label for="male" >male:</label>
-              <input type="radio" id="male" name="gender" value="male" />
+              <label for="bedroom" >male:</label>
+              <input type="radio" id="developer" name="developer" value="developer" />
 
-              <label for="female">female:</label>
-              <input type="radio" id="female" name="gender" value="female" />
+              <label for="conference">female:</label>
+              <input type="radio" id="facilitator" name="facilitator" value="facilitator" />
               <br />
             </div>
         </div>
@@ -70,7 +70,7 @@
               <th>Room</th>
               <th>Name</th>
               <th>Role</th>
-              <th>Gender</th>
+              <th>bedroom</th>
               
             </table> 
           </div>
