--- a/Desktop/room/index.html
+++ b/Desktop/room/index.html
@@ -44,11 +44,11 @@
             </div>
 
             <div class="item">
-              <label>Gender:</label><br>
-              <label for="bedroom" >male:</label>
+              <label>input:</label><br>
+              <label for="bedroom" >developer:</label>
               <input type="radio" id="developer" name="developer" value="developer" />
 
-              <label for="conference">female:</label>
+              <label for="conference">facilitator:</label>
               <input type="radio" id="facilitator" name="facilitator" value="facilitator" />
               <br />
             </div>
